style.css
body {
    line-height: 1.5;
    font-family: Sora, Geneva, Tahoma, sans-serif;
    font-size: 18px;
    color: rgb(124, 57, 9);   
    margin: 0;
    overflow-x: hidden;
}

footer {
    background-color: rgb(243, 198, 169); 
    padding-left: 70px;
    padding-right: 70px;
    padding-top: 20px;
    padding-bottom: 20px;
}


/* header */

.header-container {
    background-image: linear-gradient(180deg, rgb(243, 198, 169) 5%, white 30%);
    width: 100%;
    color: rgb(104, 52, 16); 
    font-size: 18px;
}

.table-position {
    margin-left: auto;
    margin-right: auto;
}

.banner {
    width: 100%; 
}

.header-table {
    padding-right: 50px;
    padding-left: 50px;
    text-align: center;
}

.header-link {
    color: rgb(104, 52, 16);
    text-decoration: none;
}


/* main content section */

.content {
    padding-left: 330px;
    padding-right: 330px;
}

.content .paragraph {
    padding-top: 40px;
}

.recipe-table {
    padding-right: 75px;
    text-align: center;
}

.recipe-link {
    color: rgb(196, 111, 21);
}

.about-table {
    padding-right: 30px;
}

/* lists */

.list-padding {
    padding-left: 20px; 
}

/* footer */

.footer-copy {
    font-size: x-small;
}

